--- a/src/Pages/Appointment/Appointment.css
+++ b/src/Pages/Appointment/Appointment.css
@@ -1,10 +1,4 @@
 
 .form{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* padding-top: 200px; */
-}
-.margin{
-    margin-bottom: 50px;
+    margin: auto;
 }
